--- a/package.json
+++ b/package.json
@@ -1,31 +1,37 @@
 {
-  "name": "api-docs-v2",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev --turbo",
-    "start": "next start",
-    "postinstall": "fumadocs-mdx"
-  },
-  "dependencies": {
-    "next": "15.3.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "fumadocs-ui": "15.4.0",
-    "fumadocs-core": "15.4.0",
-    "fumadocs-mdx": "11.6.6"
-  },
-  "devDependencies": {
-    "@types/node": "22.15.21",
-    "@types/react": "^19.1.5",
-    "@types/react-dom": "^19.1.5",
-    "typescript": "^5.8.3",
-    "@types/mdx": "^2.0.13",
-    "@tailwindcss/postcss": "^4.1.7",
-    "tailwindcss": "^4.1.7",
-    "postcss": "^8.5.3",
-    "eslint": "^8",
-    "eslint-config-next": "15.3.2"
-  }
+	"name": "api-docs-v2",
+	"version": "0.0.0",
+	"private": true,
+	"scripts": {
+		"build": "next build",
+		"dev": "next dev --turbo",
+		"start": "next start",
+		"postinstall": "fumadocs-mdx"
+	},
+	"dependencies": {
+		"@scalar/api-client-react": "^1.3.3",
+		"fumadocs-core": "15.4.0",
+		"fumadocs-mdx": "11.6.6",
+		"fumadocs-openapi": "^9.0.1",
+		"fumadocs-ui": "15.4.0",
+		"next": "15.3.2",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"shiki": "^3.4.2"
+	},
+	"devDependencies": {
+		"@ariesclark/eslint-config": "^3.1.1",
+		"@eslint-react/eslint-plugin": "^1.50.0",
+		"@tailwindcss/postcss": "^4.1.7",
+		"@types/mdx": "^2.0.13",
+		"@types/node": "22.15.21",
+		"@types/react": "^19.1.5",
+		"@types/react-dom": "^19.1.5",
+		"eslint": "^9.27.0",
+		"eslint-config-next": "15.3.2",
+		"eslint-plugin-react-refresh": "^0.4.20",
+		"postcss": "^8.5.3",
+		"tailwindcss": "^4.1.7",
+		"typescript": "^5.8.3"
+	}
 }
