--- a/package.json
+++ b/package.json
@@ -3,17 +3,19 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"build": "next build",
-		"dev": "next dev --turbo",
+		"build": "rm ./content/docs/openapi/\\(generated\\)/**/*.mdx -rf && node scripts/generate-docs.mjs && next build",
+		"dev": "rm ./content/docs/openapi/\\(generated\\)/**/*.mdx -rf && node scripts/generate-docs.mjs && next dev --turbo",
 		"start": "next start",
 		"postinstall": "fumadocs-mdx"
 	},
 	"dependencies": {
+		"@icons-pack/react-simple-icons": "^12.8.0",
 		"@scalar/api-client-react": "^1.3.3",
 		"fumadocs-core": "15.4.0",
 		"fumadocs-mdx": "11.6.6",
 		"fumadocs-openapi": "^9.0.1",
 		"fumadocs-ui": "15.4.0",
+		"lucide-react": "^0.511.0",
 		"next": "15.3.2",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
@@ -30,6 +32,7 @@
 		"eslint": "^9.27.0",
 		"eslint-config-next": "15.3.2",
 		"eslint-plugin-react-refresh": "^0.4.20",
+		"openapi-types": "^12.1.3",
 		"postcss": "^8.5.3",
 		"tailwindcss": "^4.1.7",
 		"typescript": "^5.8.3"
