--- a/package.json
+++ b/package.json
@@ -10,34 +10,36 @@
 	},
 	"dependencies": {
 		"@icons-pack/react-simple-icons": "^12.9.0",
-		"@scalar/api-client-react": "^1.3.10",
+		"@scalar/api-client-react": "^1.3.17",
 		"fumadocs-core": "15.4.0",
+		"fumadocs-docgen": "^2.0.1",
 		"fumadocs-mdx": "11.6.6",
-		"fumadocs-openapi": "^9.0.8",
-		"fumadocs-twoslash": "^3.1.3",
+		"fumadocs-openapi": "^9.0.13",
+		"fumadocs-twoslash": "^3.1.4",
 		"fumadocs-ui": "15.4.0",
 		"lucide-react": "^0.511.0",
 		"next": "15.3.2",
+		"oxc-transform": "^0.73.2",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
-		"shiki": "^3.6.0",
+		"shiki": "^3.7.0",
 		"twoslash": "^0.3.1",
-		"vrchat": "^1.19.4",
-		"zod": "^3.25.64"
+		"vrchat": "1.19.4-alpha.0",
+		"zod": "^3.25.67"
 	},
 	"devDependencies": {
 		"@ariesclark/eslint-config": "^3.1.1",
-		"@eslint-react/eslint-plugin": "^1.52.1",
+		"@eslint-react/eslint-plugin": "^1.52.2",
 		"@tailwindcss/postcss": "^4.1.10",
 		"@types/mdx": "^2.0.13",
 		"@types/node": "22.15.21",
 		"@types/react": "^19.1.8",
 		"@types/react-dom": "^19.1.6",
-		"eslint": "^9.28.0",
+		"eslint": "^9.29.0",
 		"eslint-config-next": "15.3.2",
 		"eslint-plugin-react-refresh": "^0.4.20",
 		"openapi-types": "^12.1.3",
-		"postcss": "^8.5.5",
+		"postcss": "^8.5.6",
 		"tailwindcss": "^4.1.10",
 		"typescript": "^5.8.3"
 	}
