--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"react-dom": "^19.1.0",
 		"shiki": "^3.7.0",
 		"twoslash": "^0.3.1",
-		"vrchat": "1.19.4-alpha.0",
+		"vrchat": "1.20.0-next.1750779000",
 		"zod": "^3.25.67"
 	},
 	"devDependencies": {
